# ecg-classifier

./: .gitignore  Dockerfile  LICENSE  README.md  ToDO.md  pyproject.toml  test_ecg.csv
scripts/: generate_demo_csv.py  generate_demo_wfdb.py  plot_gru_loss.py  train_gru.py  train_logreg.py
src/ecg_classifier/: api.py  cli.py  inference.py  training.py
src/ecg_classifier/artifacts/: gru.pt  logreg.joblib
src/ecg_classifier/data/: __init__.py  loader.py
src/ecg_classifier/demo/wfdb/: demo_wfdb.hea
src/ecg_classifier/io/: __init__.py  csv_loader.py  load.py  wfdb_loader.py
src/ecg_classifier/models/: __init__.py  gru.py  logreg.py
tests/: logregTest.py  smoke_test.ps1  test_api.py  test_inference.py
tests/assets/: test_ecg_12lead.csv
